--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
     "displayName": "ARMIPS",
     "description": "ARMIPS syntax support for ARMv4 (GBA)",
     "version": "1.0.0",
+    "publisher": "Ajarmar",
     "engines": {
         "vscode": "^1.41.0"
     },
     "categories": [
         "Programming Languages"
     ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Ajarmar/vscode-armips.git"
+    },
     "contributes": {
         "languages": [{
             "id": "armips",
